Fix header CV link wrapping

--- a/darbs/style.scss
+++ b/darbs/style.scss
@@ -15,13 +15,17 @@ body {
 header {
 	display: flex;
 	position: relative;
+	padding-left: 35px;
 	align-items: center;
+	flex-wrap: wrap;
+	gap: 15px 35px;
 
 	h1 {
 		font-size: 2em;
 		font-weight: 700;
 		line-height: 1.2;
-		margin: 0 auto 0 35px;
+		margin: 0 auto 0 0;
+
 		&:before {
 			content: '🚀';
 			display: block;
@@ -32,6 +36,8 @@ header {
 
 	a {
 		font-weight: 700;
+		text-wrap: nowrap;
+
 		&:before {
 			content: '📄';
 			display: inline-block;
